--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primevue/forms": "^4.2.3",
     "@primevue/themes": "^4.2.3",
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
