--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.3",
-    "vue": "^3.2.13"
+    "quill": "^2.0.2",
+    "vue": "^3.2.13",
+    "vue3-simple-html2pdf": "^0.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
