Ajout des bordures+ upload de l'image pour la fiche du perso

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@primevue/forms": "^4.2.3",
     "@primevue/themes": "^4.2.3",
     "core-js": "^3.8.3",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.3",
     "quill": "^2.0.2",
