--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "character_sheet_creator",
+  "name": "creation-fiche-yakuza",
   "version": "0.1.0",
   "private": true,
   "scripts": {
